Changes in v1.5.9: (Aug. 21, 2017.)
========================================================================

This is a minor bug fix and maintenance release:

- OS/2 support using SDL.

- Updated third-party libraries (music codecs, SDL, etc.)

- Support for Watcom compiler targeting OS/2 and Windows.

- Support for libxmp for tracker music decoding (disabled by default.)

- New AmigaOS MIDI driver using CAMD library.

- Several optimized assembler sources for m68k-amigaos.

- gcc is now supported to target m68k-amigaos.

- Software renderer: Reduced some 2D overdraw. Faster model lighting.

- Recursion optimizations to server world query procedures.

- New 'viewpos' command to display client's position and angles (based
  on FitzQuake version.)

- Other minor fixes, tidy-ups, and protability tweaks.


========================================================================
Changes in v1.5.8a (Aug. 28, 2016)
========================================================================

This is a post-release patch against v1.5.8 fixing a few Amiga issues:

- Amiga sound (AHI backend): fix sample rates lower than 11025 Hz.

- Amiga sound (AHI backend): fix bad sound with sample rates which are
  not a multiple of 11025.

- Amiga input: limit lowlevel.library joystick ports to 0-3.

- AmigaOS3, MiniGL: smart and automatic locking support.  New cvar:
  gl_lockmode, valid values: "manual" (default), "auto", and "smart".


========================================================================
Changes in v1.5.8: (Aug. 12, 2016.)
========================================================================

This is a minor bug fix and maintenance release:

- Software renderer: Fixed a reported crash if the engine is compiled
  with certain Visual Studio versions (bug #62.)

- Software renderer: Fixed sky scaling issues, thanks to Szilard Biro.
 (fix found in 'ToChriS' quake source.)

- Software renderer: Fixed scaling console backgrounds whose dimensions