@@ -14,6 +14,9 @@ This is a minor bug fix and maintenance release:
 
 - Support for libxmp for tracker music decoding (disabled by default.)
 
+- AHI audio no longer fails if the library returns 32 bit format (e.g.
+  in AROS v0 nightly builds.)
+
 - New AmigaOS MIDI driver using CAMD library.
 
 - Several optimized assembler sources for m68k-amigaos.
